exams/piscine/4-0-ft_atoi/4-0-ft_atoi.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r4p8.42.us.org
Darwin 15.6.0 x86_64
$> date
Fri Oct 27 21:46:26 PDT 2017
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/c++/4.2.1
Apple LLVM version 8.0.0 (clang-800.0.38)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 8.0.0 (clang-800.0.38)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2017/piscine-c-exam00/exam_20171028/nmolina

= Git history ==================================================================
$> git -C /var/folders/pn/st53s5bd1nq_x4vp03vq3jp00000gp/T/tmpu16dxJ/user log --pretty='%H - %an, %ad : %s'
a2744ff3da4e1197937dee1682cd012a04624ad3 - Exam 42, Fri Oct 27 21:45:42 2017 -0700 : attempted level 4 - ft_atoi
2d9a1aa0f84f7454871834db0b590c9235f064f3 - Exam 42, Fri Oct 27 21:29:48 2017 -0700 : one last backup before submission
ab4813ad581962ed0fa9d67a47b1e7845bffdb9a - Exam 42, Fri Oct 27 21:15:41 2017 -0700 : another backup
1adfa9bf0adcf2dbb6021a697dc6a340cbc6bc36 - Exam 42, Fri Oct 27 21:05:59 2017 -0700 : another backup just in case of restart
b3afff661f57de64bebff93acdaa552f933b0f52 - Exam 42, Fri Oct 27 20:02:37 2017 -0700 : saving in case of another random restart
317c39ef16fedc3192be997ab13c5d2f092a11be - Exam 42, Fri Oct 27 19:19:40 2017 -0700 : attempted level 3 - ft_swap
bf5b2aa638ea7c91126e2ed24d5521e219621822 - Exam 42, Fri Oct 27 18:56:42 2017 -0700 : formatted to follow Norm standards on level 2 - maff_revalpha
9c7d26d7d2be5b0bbbc3c6188c86d1116aaef768 - Exam 42, Fri Oct 27 18:51:39 2017 -0700 : attempted level 2 - maff_revalpha
7e5d0901ebbbc3380201f9fb59cc66c24da09b8b - Exam 42, Fri Oct 27 18:42:02 2017 -0700 : attempted level 1 - hello
c3902f83eb1b04e4df50d9a9cba8378bcd91326e - Exam 42, Fri Oct 27 18:30:52 2017 -0700 : attempted level 0 - only_z
0346dbf28c0ff088d8cd23f9ba94e07e23fdab40 - Exam 42, Fri Oct 27 18:20:36 2017 -0700 : attempted level 0 - only_a
 
= Collected files ==========================================
$> ls -lAR /var/folders/pn/st53s5bd1nq_x4vp03vq3jp00000gp/T/tmpu16dxJ/user
total 8
-rw-r--r--  1 deepthought  deepthought  2894 Oct 27 21:46 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Oct 27 21:46 ft_atoi
drwxr-xr-x  3 deepthought  deepthought   102 Oct 27 21:46 ft_swap
drwxr-xr-x  3 deepthought  deepthought   102 Oct 27 21:46 hello
drwxr-xr-x  3 deepthought  deepthought   102 Oct 27 21:46 maff_revalpha
drwxr-xr-x  3 deepthought  deepthought   102 Oct 27 21:46 only_a
drwxr-xr-x  3 deepthought  deepthought   102 Oct 27 21:46 only_z

/var/folders/pn/st53s5bd1nq_x4vp03vq3jp00000gp/T/tmpu16dxJ/user/ft_atoi:
total 8
-rw-r--r--  1 deepthought  deepthought  1254 Oct 27 21:46 ft_atoi.c

/var/folders/pn/st53s5bd1nq_x4vp03vq3jp00000gp/T/tmpu16dxJ/user/ft_swap:
total 8
-rw-r--r--  1 deepthought  deepthought  971 Oct 27 21:46 ft_swap.c

/var/folders/pn/st53s5bd1nq_x4vp03vq3jp00000gp/T/tmpu16dxJ/user/hello:
total 8
-rw-r--r--  1 deepthought  deepthought  1281 Oct 27 21:46 hello.c

/var/folders/pn/st53s5bd1nq_x4vp03vq3jp00000gp/T/tmpu16dxJ/user/maff_revalpha:
total 8
-rw-r--r--  1 deepthought  deepthought  1299 Oct 27 21:46 maff_revalpha.c

/var/folders/pn/st53s5bd1nq_x4vp03vq3jp00000gp/T/tmpu16dxJ/user/only_a:
total 8
-rw-r--r--  1 deepthought  deepthought  972 Oct 27 21:46 only_a.c

/var/folders/pn/st53s5bd1nq_x4vp03vq3jp00000gp/T/tmpu16dxJ/user/only_z:
total 8
-rw-r--r--  1 deepthought  deepthought  1033 Oct 27 21:46 only_z.c
 
= ft_atoi ======================================================================
$> gcc -Wextra -Wall -Werror main.c ft_atoi.c -o user_exe 
ft_atoi.c:17:6: error: unused variable 'converted' [-Werror,-Wunused-variable]
        int converted;
            ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
